Fix text align issues by increasing the width of the status bar
 - prior to this patch: https://cloudup.com/cqLZBsR_W10

--- a/assets/css/wcs-importer.css
+++ b/assets/css/wcs-importer.css
@@ -78,7 +78,7 @@
 	color: #fff;
 	font-weight: bold;
 	text-shadow:0 1px 0 rgba(0,0,0,0.3);
-	width: 66px;
+	width: 76px;
 }
 #wcsi-progress .column-status mark.active {
 	background-color: #339933;
